--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit==1.29.0
-streamlit-lottie==0.0.5
-pdfkit==1.0.0
-scikit-learn==1.3.2
-python-docx==1.1.0
-PyMuPDF==1.23.4
-requests==2.31.0
-numpy==1.26.2
-pandas==2.1.2
-matplotlib==3.8.2
-beautifulsoup4==4.12.2
-lxml==4.9.3
+streamlit
+streamlit-lottie
+pdfkit
+scikit-learn
+python-docx
+pymupdf
+requests
+numpy
+pandas
+matplotlib
+beautifulsoup4
+lxml
